<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".connectins.ChatActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"

            tools:context=".connectins.ChatActivity">

            <RelativeLayout
                android:id="@+id/headerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingVertical="12dp">

                <ImageView
                    android:id="@+id/closeIV"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/closeIV"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/edit_profile"
                    android:textColor="#505050"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/saveIV"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:padding="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_check" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/userIV"
                android:layout_width="122dp"
                android:layout_height="122dp"
                android:padding="4dp"
                android:src="@drawable/corner_60_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/change_profile_photo"
                android:textColor="#83b259"
                android:textSize="16sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:text="Goku" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/detailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_details"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/detailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:text="Tesla, Inc. is an American electric vehicle and clean
energy company based in Palo Alto, California. Tesla's
current products include electric cars, battery energy
storage from home to grid-scale, solar panels and solar
roof tiles, as well as other related products and services." />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:layout_marginHorizontal="16dp"
                android:textSize="12sp"
                android:textColor="#9a9a9a"
                android:text="@string/requirements"
                />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/requirementsChipGroup"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                app:chipSpacingVertical="2dp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:layout_marginHorizontal="16dp"
                android:textSize="12sp"
                android:textColor="#9a9a9a"
                android:text="@string/products"
                />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/productsChipGroup"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                app:chipSpacingVertical="2dp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:text="76576587658" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_contact"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:text="elonMusk@c2fo.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectorTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sector"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/sectorET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:text="Business" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/buisinessTypeTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_of_business"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/buisinessTypeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/white"
                    tools:text="Product/Service" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/geographicalTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/geographical_service_area"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/geographicalET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/white"
                    tools:text="Kansas City, U.S.A" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/invoiceToolTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invoice_accounting_tool"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/invoiceToolET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    tools:text="NA" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_f1f1f1" />

            <TextView
                android:id="@+id/logoutTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="sans-serif"
                android:paddingVertical="16dp"
                android:paddingStart="16dp"
                android:text="@string/logout"
                android:textColor="#7eab57"
                android:textSize="14sp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>