<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="0dp">

    <RelativeLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/userIV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/hiTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/userIV"
            android:fontFamily="sans-serif"
            android:text="Hi, "
            android:textColor="#959595"
            android:textSize="20sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/searchIV"
            android:layout_toEndOf="@+id/hiTV"
            android:fontFamily="sans-serif"
            android:text="Hi,"
            android:textColor="#505050"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/chatIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chat" />

        <ImageView
            android:id="@+id/searchIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@+id/chatIV"
            android:src="@drawable/ic_search" />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/searchET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/corner_36_white"
            android:drawableRight="@drawable/ic_search"
            android:elevation="2dp"
            android:drawablePadding="16dp"
            android:hint="@string/hint_search"
            android:padding="12dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/tabContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerContainer"

        android:layout_marginTop="12dp"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/homeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_36_green"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/home"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/myVideosTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/my_videos"
            android:textColor="#505050"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabContainer"
        android:layout_marginTop="24dp"
        tools:background="@color/purple_500" />


</RelativeLayout>